implements finished exam display

--- a/src/app/modules/checkin/checkin.component.html
+++ b/src/app/modules/checkin/checkin.component.html
@@ -28,7 +28,7 @@
             mat-raised-button
             type="submit"
             color="primary"
-            (click)="checkin()"
+            (click)="checkIn()"
           >
             Check-in
           </button>
