--- a/src/app/modules/main/exams/exams.component.scss
+++ b/src/app/modules/main/exams/exams.component.scss
@@ -1,4 +1,16 @@
 
+.active-exams {
+  .mat-subheading-1 {
+    margin: 1.6rem 0 0 1.6rem;
+  }
+}
+
+.inactive-exams {
+  .mat-subheading-1 {
+    margin: 4.6rem 0 0 1.6rem;
+  }
+}
+
 mat-card {
   table {
     width: 100%;
