--- a/src/app/modules/main/main.component.scss
+++ b/src/app/modules/main/main.component.scss
@@ -3,8 +3,7 @@ mat-sidenav-container {
 }
 
 .main-container {
-  padding-top: 5rem;
-  height: 100%;
+  padding: 5rem 0;
   max-width: 120rem;
   margin: 0 auto;
 }
