--- a/src/app/modules/main/exams/exams.component.html
+++ b/src/app/modules/main/exams/exams.component.html
@@ -13,7 +13,7 @@
 
         <ng-container *ngIf="exams.active.length !== 0; else empty"
         >
-          <table mat-table [dataSource]="exams.active">
+          <table mat-table matSort [dataSource]="exams.active">
 
             <ng-container matColumnDef="patient">
               <th mat-header-cell *matHeaderCellDef>Paciente</th>
@@ -33,7 +33,7 @@
             </ng-container>
 
             <ng-container matColumnDef="date">
-              <th mat-header-cell *matHeaderCellDef>Consulta</th>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header>Consulta</th>
               <td mat-cell *matCellDef="let exam">
                 {{ exam.date | date: "dd/MM/yyyy" }}
               </td>
